// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameField renders cells for passed empty GameField 1`] = `
.emotion-10 {
  box-sizing: border-box;
  border: 3px solid gray;
  padding: 3px;
  display: inline-block;
  border-color: hsla(210,10.8%,14.5%,0.12);
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  display: inline-block;
  width: 20px;
  height: 20px;
  border: 1px solid gray;
  box-sizing: border-box;
  vertical-align: middle;
  background: white;
  border-color: hsla(210,10.8%,14.5%,0.12);
  background: white;
}

.emotion-0:hover {
  border-width: 3px;
}

<div
  className="emotion-10 emotion-11"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-0 emotion-1"
      onClick={[Function]}
    />
    <div
      className="emotion-0 emotion-1"
      onClick={[Function]}
    />
  </div>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-0 emotion-1"
      onClick={[Function]}
    />
    <div
      className="emotion-0 emotion-1"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`GameField renders filled cells snapshot check 1`] = `
.emotion-10 {
  box-sizing: border-box;
  border: 3px solid gray;
  padding: 3px;
  display: inline-block;
  border-color: hsla(210,10.8%,14.5%,0.12);
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: inline-block;
  width: 20px;
  height: 20px;
  border: 1px solid gray;
  box-sizing: border-box;
  vertical-align: middle;
  background: white;
  border-color: hsla(210,10.8%,14.5%,0.12);
  background: white;
}

.emotion-2:hover {
  border-width: 3px;
}

.emotion-0 {
  display: inline-block;
  width: 20px;
  height: 20px;
  border: 1px solid gray;
  box-sizing: border-box;
  vertical-align: middle;
  background: white;
  border-color: hsla(210,10.8%,14.5%,0.12);
  background: #212529;
}

.emotion-0:hover {
  border-width: 3px;
}

<div
  className="emotion-10 emotion-11"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-0 emotion-1"
      onClick={[Function]}
    />
    <div
      className="emotion-2 emotion-1"
      onClick={[Function]}
    />
  </div>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2 emotion-1"
      onClick={[Function]}
    />
    <div
      className="emotion-2 emotion-1"
      onClick={[Function]}
    />
  </div>
</div>
`;
